# dsenproduccion

./: .cruft.json  .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  skills-lock.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  pre-commit_autoupdate.yml
notebooks/: README.md
notebooks/1-data/: 01_jdg_churn_data_loading_20260221.ipynb  02_jdg_churn_data_cleaning_20260221.ipynb
notebooks/2-exploration/: 01_jdg_churn_data_description_20260221.ipynb
